--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -1,7 +1,30 @@
-.apresentação {
+.introText {
+    margin: 0;
+    padding: 0;
     position: absolute;
     color: white;
-    font-size: 20px;
-    top: 20%;
-    left: 20%;
+    font-size: 25px;
+    top: 40%;
+    left: 15%;
+}
+
+.apresentação {
+    font-family: 'Marcellus', sans-serif;
+}
+
+.meuNome {
+    background-image: linear-gradient(to right, rgb(0, 247, 255), rgb(0, 255, 179));
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+}
+
+.animados {
+    font-family: Cinzel, sans-serif;
+    position: absolute;
+    color: white;
+    font-size: 22px;
+    top: 93%;
+    left: 2%;
 }
