--- a/src/components/socializar/socializar.css
+++ b/src/components/socializar/socializar.css
@@ -1,14 +1,89 @@
-ul {
-    list-style-type: none;
-    padding: 0;
+* {
     margin: 0;
+    padding: 0;
+}
+.iconsPerfis {
+    top: 50%;
+    left: 30px;
+    width: 20px;
+    height: 200px;
+    position: fixed;
+    margin-top: -100px;
 }
 
-li {
-    color: white;
+.iconsPerfis ul {
+    list-style: none;
 }
 
-a {
-    color: white;
-    text-decoration: none;
+.iconsPerfis svg {
+    width: 1.3em;
+    height: 1.3em;
+    fill: rgb(255, 255, 255);
+}
+
+.iconsPerfis p {
+    top: 70px;
+    left: -24px;
+    width: 68px;
+    height: 20px;
+    color: rgb(255, 255, 255);
+    font-size: 14px;
+    font-weight: 600;
+    line-height: 1.2;
+    white-space: nowrap;
+    position: relative;
+    transform: rotate( -90deg);
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+.iconsPerfis ul li {
+    display: block;
+    font-size: 12px;
+    text-align: center;
+    margin-bottom: 10px;
+    transition: all .3s;
+}
+
+.iconsPerfis p:after {
+    top: 9px;
+    right: -48px;
+    width: 55px;
+    height: 1px;
+    content: "";
+    display: block;
+    position: absolute;
+    background-color: rgb(4, 255, 242);
+}
+
+@media only screen and (max-width: 991px) {
+    .iconsPerfis {
+        width: unset;
+        height: unset;
+        position: static;
+        margin-top: unset;
+        display: flex;
+        flex-direction: row-reverse;
+        justify-content: center;
+        padding: 40px 0;
+        align-items: center;
+    }
+    .iconsPerfis p {
+        top: unset;
+        left: unset;
+        width: unset;
+        height: unset;
+        white-space: nowrap;
+        position: relative;
+        transform: unset;
+        font-size: 17px;
+        margin-right: 65px;
+    }
+    .iconsPerfis ul {
+        margin-bottom: 20px;
+    }
+    .iconsPerfis ul li {
+        display: inline;
+        margin-bottom: 29px;
+        margin-right: 10px;
+    }
 }
