--- a/src/header/navbar.css
+++ b/src/header/navbar.css
@@ -3,6 +3,18 @@
     padding: 0;
 }
 
+.titulo {
+    font-size: 1.5em;
+    left: 10px;
+    margin: .5rem;
+    font-weight: bold;
+    text-decoration: none;
+    color: white;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    z-index: 1001;
+    position: fixed;
+}
+
 nav {
     position: fixed;
     top: 0;
@@ -17,20 +29,13 @@ nav {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.158);
 }
 
-nav .titulo {
-    font-size: 1.5em;
-    margin: .5rem;
-    font-weight: bold;
-    text-decoration: none;
-    color: white;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}
 
 nav svg {
     width: 3.3em;
     height: 2em;
     fill: rgb(255, 255, 255);
     margin-top: 10px;
+    margin-left: 85em;
 }
 
 nav ul {
@@ -50,48 +55,68 @@ nav ul li a {
     border-radius: .5rem;
 }
 
-/*
-.list {
-    height: 100%;
-    display: flex;
-    width: 2.3em;
-}
-
-.navbar {
-    top: 5%;
-    left: 45px;
-    width: 20px;
-    height: 200px;
+.sidebar {
     position: fixed;
-    margin-top: -100px;
+    top: 0;
+    right: 0;
+    height: 100vh;
+    width: 250px;
+    z-index: 999;
+    background-color: rgba(0, 0, 0, 0.425);
+    backdrop-filter: blur(10px);
+    box-shadow: -10px 0 10px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
 }
 
-.list ul {
+.sidebar li {
+    font-size: 20px;
+    margin-top: 25px;
+    width: 100%;
+    color: white;
     list-style: none;
+    text-decoration: none;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-.list svg {
-    top: 73px;
-    left: 52em;
-    width: 2.3em;
-    height: 1.3em;
+.sidebar a {
+    display: block;
+    position: relative;
+    text-align: center;
+    width: 100%;
+    color: white;
+    text-decoration: none;
+    padding: 0.5rem;
+    margin: 0 0.5rem;
+    border-radius: .5rem;
+}
+
+.sidebar a::after {
+    content: ''; /* Adiciona um elemento pseudo para representar a linha */
+    position: absolute; /* Posiciona a linha absolutamente em relação ao link */
+    left: -7.5px; /* Alinha a linha à esquerda do link */
+    bottom: 0; /* Posiciona a linha na parte inferior do link */
+    width: 100%; /* Faz a linha ter o mesmo comprimento do link */
+    height: 1px; /* Define a altura da linha */
+    background-color: rgb(4, 255, 242); /* Cor da linha */
+    transform: scaleX(0); /* Começa com a linha invisível */
+    transition: transform 0.3s ease; /* Adiciona uma transição suave para a animação */
+}
+
+.sidebar a:hover::after {
+    transform: scaleX(1); /* Quando o mouse passa sobre o link, a linha se torna visível */
+}
+
+.sidebar svg {
+    width: 2.7em;
+    height: 1.7em;
     fill: rgb(255, 255, 255);
-    font-size: 25px;
-    font-weight: 600;
-    position: relative;
+    margin-top: 12px;
+    margin-left: 12em;
 }
 
-.navbar p {
-    top: 35px;
-    left: -24px;
-    width: 68px;
-    height: 20px;
-    color: rgb(255, 255, 255);
-    font-size: 25px;
-    font-weight: 600;
-    line-height: 1.2;
-    white-space: nowrap;
-    position: relative;
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-}*/
-  
+.navbar.menu-open{
+    display: none;
+}
