--- a/src/index.css
+++ b/src/index.css
@@ -19,3 +19,35 @@
     height: 100vh;
     background-color: var(--bg-color);
 }
+
+/* Para navegadores baseados em WebKit (Chrome, Safari, etc.) */
+::-webkit-scrollbar {
+    width: 11px; /* largura da barra de rolagem */
+}
+
+::-webkit-scrollbar-track {
+    background: rgb(202, 202, 202);        /* color of the tracking area */
+  }
+
+::-webkit-scrollbar-thumb {
+    background-color: #252525; /* cor da alça da barra de rolagem */
+    border-radius: 10px; /* raio da borda da alça */
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: #555; /* cor da alça da barra de rolagem ao passar o mouse */
+}
+
+/* Para navegadores baseados em Firefox */
+scrollbar {
+    width: 11px; /* largura da barra de rolagem */
+}
+
+scrollbar-thumb {
+    background-color: #252525; /* cor da alça da barra de rolagem */
+    border-radius: 10px; /* raio da borda da alça */
+}
+
+scrollbar-thumb:hover {
+    background-color: #555; /* cor da alça da barra de rolagem ao passar o mouse */
+}
