--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -28,3 +28,22 @@
     top: 93%;
     left: 2%;
 }
+
+.scroll-down-icon {
+    position: fixed;
+    color: rgb(0, 247, 255);
+    font-size: 35px;
+    bottom: 50px;
+    left: 50%;
+    transform: translateX(-50%);
+    animation: bounce 0.5s infinite alternate;
+}
+
+@keyframes bounce {
+    0% {
+        transform: translateX(-50%) translateY(0);
+    }
+    100% {
+        transform: translateX(-50%) translateY(10px);
+    }
+}
